# bazel-dependency-discovery-tests

./: README.md  RUNME.sh
haskell_cabal_library/: README.txt  RUNME.sh
http_archive/: README.txt  RUNME.sh  myresolved.txt
http_jar/: README.txt  RUNME.sh  myresolved.txt
jvm_maven_import_external/: BUILD.bazel  README.md  README.txt  RUNME.sh  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-vmware191220  myresolved.txt
jvm_maven_import_external/src/: ._main
jvm_maven_import_external/src/main/java/com/vmware/blackduck_demo/: Hello.java
maven_install/: README.txt  RUNME.sh  mybetterrule.json  mynewrule.json  myresolved.txt  saved_bdio.jsonld  tests_integration_ArtifactExclusionsTest_Default_Detect_Version_rules_jvm_external_bazel_bom.jsonld
maven_jar/: BUILD  README.txt  RUNME.sh  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-simple-java-example  bazel-testlogs
maven_jar/src/main/java/com/example/: Greeting.java  ProjectRunner.java
